--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "generate-types:watch": "npm run generate-types && chokidar \"../backend/T3Sharp/**/*.{cs,csproj}\" -c \"npm run generate-types\""
   },
   "dependencies": {
+    "@anatine/zod-openapi": "^2.2.8",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
@@ -35,11 +36,11 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "chokidar-cli": "^3.0.0",
+    "concurrently": "^9.1.0",
     "openapi-typescript": "^7.4.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
-    "typescript": "^5.8.2",
-    "concurrently": "^9.1.0"
+    "typescript": "^5.8.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
