--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "next": "^15.2.3",
+    "openapi-typescript-fetch": "^2.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "superjson": "^2.2.1",
